# projmap

./: .gitignore  MANIFEST  README  README.md  projmap_settings.toml  pyproject.toml  settings.toml  setup.py
projmap/: __init__.py  basemap.py  cartomap.py  config.py  hitta.py  map_region.py  map_regions.cfg
projmap/data/: pf.txt  saccf.txt  saf.txt  sbdy.txt  stf.txt
src/projmap/: __init__.py  cartomap.py  config.py  map_regions.cfg
tests/: test_individual_maps.py  test_plot_funtions.py  test_projmap.py  test_subplots.py
