[tool.poetry]
name = "projmap"
version = "0.86"
description = "High level wrapper of matplotlibs mapping package"
authors = ["Bror Jonsson <brorfred@gmail.com>"]
readme = "README.md"
packages = [{include = "projmap", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.15"
six = "^1.12"
matplotlib = ">=3.0"
cartopy = ">=0.18.0"
scipy = "^1.3"
cython = "^0.29.21"
pyshp = "^2.1.0"
dynaconf = "^3.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

#[build-system]
#requires = ["poetry>=0.12"]
#build-backend = "poetry.masonry.api"

[build-system]
requires = ["poetry-core"]