[tool.poetry]
name = "projmap"
version = "0.9.0"
description = ""
authors = ["Bror Jonsson <brorfred@gmail.com>"]
readme = "README.md"
packages = [{include = "projmap", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.2"
matplotlib = "^3.8.3"
cartopy = "^0.22.0"
scipy = "^1.12.0"
dynaconf = "^3.2.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ipython = "^8.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
