[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "projmap"
version = "2.0.0"
description = "Simplify the generation of maps using Cartopy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cartopy>=0.25.0",
    "dynaconf>=3.2.12",
    "matplotlib-scalebar>=0.9.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "xarray>=2026.2.0",
    "netcdf4>=1.7.4",
]
